test/Fail/Funext.agda
open import Agda.Builtin.Erased.Funext
