test/Fail/Funext.err
Funext.agda:1.1-39: error: [InfectiveImport]
Importing module
Agda.Builtin.Erased.Funext (at agda-default-include-path/Agda/Builtin/Erased/Funext.agda:1.1)
using the --erased-funext flag from a module which does not.
when scope checking the declaration
  open import Agda.Builtin.Erased.Funext

Funext.agda:1.1-39: error: [InfectiveImport]
Importing module
Agda.Builtin.Erased.Funext (at agda-default-include-path/Agda/Builtin/Erased/Funext.agda:1.1)
using the --erasure flag from a module which does not.
when scope checking the declaration
  open import Agda.Builtin.Erased.Funext
